--- a/app/src/main/res/layout/fragment_encryption_tools.xml
+++ b/app/src/main/res/layout/fragment_encryption_tools.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="16dp"
-    tools:context=".FirstFragment">
+    tools:context=".EncryptionToolsFragment">
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/filledTextField"
